# cpp_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml  lblank.yml  master.yml  master_weekly.yml  pull_requests.yml
engine/: CMakeLists.txt
engine/src/: Main.cpp
engine/tests/: TestMain.cpp
libengine/: CMakeLists.txt
libengine/include/: Engine.h
libengine/src/: Engine.cpp
libengine/tests/: TestEngine.cpp  TestGDAL.cpp
